src/assets/css/style.css
/*!
Theme Name: DKUK
Theme URI: https://github.com/jclwilson/dkuk-wp-theme
Author: Jacob Charles Wilson
Author URI: https://jacobcharleswilson.com
Description: WordPress theme developed by Jacob Charles Wilson (@jclwilson) for DKUK Salon, London.
Version: 1.0
Text Domain: dkuk
*/

/* Set variables */
:root {
	/* Spacing and sizing */
	--dkuk-root-font-size: 16px;
	--dkuk-header-font-size:6rem;
	--dkuk-large-height:2.5rem;
	--dkuk-medium-height:2rem;
	--dkuk-small-height:1.5rem;
	--dkuk-thick-line: 1rem;
	--dkuk-thin-line: calc(var(--dkuk-thick-line) / 2);

	/* Stripe variables */
	--dkuk-stripe-total-height: 4.2rem;
	--dkuk-stripe-white-height: 3.9rem;

	/* Colours */
	--dkuk-primary-colour: #222222;
	--dkuk-secondary-colour: #fefefe;
	--dkuk-tertiary-colour: #f6f6f6;
	--dkuk-highlight-colour: #5fff00;
}

/* Start by setting basic rules for elements */
/* Many of these are setting cosntant values or basic defaults that need to be inherited */
/* These could be set in the reset CSS, but I want to keep that vanilla and entirely within the critical css section of the header */
html {
	/* Sets root font size for rem unit */
	font-size: var(--dkuk-root-font-size);

	/* Typography */
	font-family: 'WorkSans', sans-serif;

	/* ensures border-box sizing, useful for masonry and flexboxgrid */
	box-sizing: border-box;
}

/* Ensures border-box sizing */
*, *:before, *:after {
	box-sizing: inherit;
}

body {
	/* Sets font size for body separately to the root font size - very important to note! */
	font-size: var(--dkuk-small-height);
	padding-top:1rem;
	color:var(--dkuk-primary-colour);
}

/* Ensure all images don't exceed boundaries*/
img {
	display:block;
	height:auto;
	max-width:100%;
	margin:0 auto;
}

a {
	text-decoration: none;
}

p {
	line-height: 1.3;
}

cite, em, strong {
	font-family: 'WorkSansBold';
}

/* End element rules*/

/* Below all CSS rules concern classes */

/* Header styles */
.header__container, .main__container, .footer__container {
	padding-bottom: var(--dkuk-stripe-total-height);
}

.header__container {
	position: relative;
	top: -0.25rem;
}

.header__container > * {
	font-size: var(--dkuk-header-font-size);
	line-height: 0.7;
}

.header__container>*:not(:last-child):not(:first-child) {
	margin-bottom: var(--dkuk-stripe-total-height);
}

.header__logo {
	height: var(--dkuk-stripe-total-height);
	position: relative;
	top:1rem;
	transform: rotate(4deg) scale(1.5,1.5);
}

/* Ends Header styles */

/* Main styles */

.main__container {
	padding-top: var(--dkuk-large-height);
}

/* Classes for Element Sizing for Masonry */
/* I haven't actually managed to get element sizing to work proeprly, so these are hacky */
/* Please change if you know how */

/* 3 columns by default */
.grid__sizer,
.grid__item {
	width: 30%;
}

/* Set the width of the gutters */
.grid__gutter-sizer {
	width:5%;
}

/* End Element Sizing for Masonry */

/* Post Preview styles */
/* These use flexbox to flip the title and the thumbnail */
/* This means that in the markup it goes title > thumbnail > excerpt */
/* But that visually it goes thumbnail > title > excerpt */

.post__preview {
    border: solid var(--dkuk-primary-colour) var(--dkuk-thin-line);
    display: flex;
    flex-direction: column;
	margin-bottom:var(--dkuk-medium-height);
	padding-bottom:var(--dkuk-medium-height);

	/* Break words on small boxes */
	overflow-wrap: break-word;
	word-wrap: break-word;
	-webkit-hyphens: auto;
	-ms-hyphens: auto;
	-moz-hyphens: auto;
	hyphens: auto;
}

.post__preview img {
	width: 100%;
	height:auto;
}

.post__header {
	margin-top:var(--dkuk-medium-height);
	margin-bottom:var(--dkuk-medium-height);
}

.post__preview .thumbnail__link {
    order: -1;
}

/* Exhibition list */
.exhibition-list {
	position: relative;
	top:-0.25rem;
}

.exhibition-list__item {
	width: 100%;
	margin-bottom: var(--dkuk-stripe-total-height);
}

.exhibition-list__title {
	font-family: WorkSansbold, Helvetica, sans-serif;
	font-weight: 700;
	font-size:6rem;
	line-height:0.7;
	text-transform: uppercase;

}

/* End Post Preview Styles */

/* Post styles */

article {background: var(--dkuk-secondary-colour);}

.singular .post__header {margin-top:0;}

.post__content>* {
	margin-bottom: var(--dkuk-medium-height);
}

.post__content a, .podcast__link, .footer__widget a {
	text-decoration: underline;
}

/* Typography */

/* Title font size and weight */
.large, .post__title, .singular h1, .singular h2, .singular h3, .singular h4, .singular h5, .singular h6 {
    font-family: 'WorkSansBold', sans-serif;
    font-weight: bold;
    text-transform: uppercase;
	font-size: var(--dkuk-large-height);
}

/* Post Images */
.singular .alignnone {
    margin: 0 var(--dkuk-small-height) var(--dkuk-small-height) 0;
}

.singular .alignright {
    float: right;
    margin: 0 0 var(--dkuk-small-height) var(--dkuk-small-height);
}

.singular .alignleft {
    float: left;
    margin: 0 var(--dkuk-small-height) var(--dkuk-small-height) 0;
}

.singular .aligncenter {
    display: block;
    margin-left: auto;
    margin-right: auto;
}
/* Ends Post Image styles */

/* Ends Post styles */

/* Component styles */

/* Exhibition */

.exhibition__title, .exhibition__organiser {
	margin-bottom:var(--dkuk-small-height)
}

/* Menu Styles */

.menu {
	display: flex;
	flex-wrap: wrap;
	justify-content: space-around;
	flex-direction: column;
}

.menu-item i._mi.dashicons {
	font-size: inherit;
}

/* End Menu Styles */

/* Salon ACF */

.haircuts, .colours {
	margin-top:var(--dkuk-medium-height);
}

.salon__prices {
	padding-top:var(--dkuk-medium-height);
	width: 100%;
	border-collapse: collapse;
}

.salon__header {
	display:none;
}

.salon__service {
	border-bottom:dashed 2px var(--dkuk-primary-colour);
	padding-top:var(--dkuk-medium-height);
	width:70%;
}

.colours__smallprint {
	display: block;
	margin-top:var(--dkuk-medium-height);
}

/* Ends Salon ACF */

/* Podcast ACF */
.podcast__title {
    display: none;
}

.podcast__file {
    width: 100%;
    margin-bottom: var(--dkuk-small-height);
}

.podcast__link-wrapper {
    margin-bottom: var(--dkuk-large-height);
}
/* Ends Podcast ACF */

/* Flickity Image Gallery */

.gallery {
	margin-bottom: var(--dkuk-large-height);
}

.attachment-post-thumbnail {
	display: block;
	margin-left: auto;
	margin-right: auto;
}

.gallery__list {
	background-color: var(--dkuk-tertiary-colour);
}

.gallery__item {
	width: 100%;
}
/* Ends Flickity styles */

.view-more {
	display: flex;
	justify-content: center;
}

.view-more__button {
	font-family: 'WorkSansBold';
	background-color: var(--dkuk-primary-colour);
	border: none;
	color: var(--dkuk-secondary-colour);
	padding: var(--dkuk-small-height)  var(--dkuk-medium-height);
	text-align: center;
	display: inline-block;
	text-transform: uppercase;
	font-size: var(--dkuk-large-height) ;
}

/* Ends Component styles */

/* Footer styles */

.footer__container {
	background-color: var(--dkuk-secondary-colour);
	padding-top: var(--dkuk-large-height);
}

.footer__container>*:not(:last-child) {
	margin-bottom:var(--dkuk-large-height);
}

/* Footer Nav */
.footer__nav .menu {
    flex-direction: row;
}

.footer__nav .menu-item:not(:last-child) {
	margin-bottom: var(--dkuk-large-height);
}

.footer .menu a {
	color:var(--dkuk-highlight-colour);
}
/* Ends Footer Nav Styles */

/* Ends Footer styles */

/* Media Queries */
/* My tendency is to construct media queries on content not on design. */
/* Have three different sizes given three columns */
/* The media queries use these values to match the flexbox ones, usually I'd move from narrow up to wide, not from wide down to narrow */
@media (max-width: 64em)  {
	/* Two columns on medium screens */
	.grid__sizer, .grid__item {
		width: 49%;
	}
	.grid__gutter-sizer {
		width:2%;
	}
	.footer__nav .menu-item {
    	min-width: 49%;
	}
}

@media (max-width: 48em) {
	body {
		font-size: 1.5rem;
		--dkuk-header-font-size:3rem;
		--dkuk-stripe-total-height: 2.1rem;
		--dkuk-stripe-white-height: 1.95rem;
	}
	.header__container {
		top: -0.1rem;
	}
	.large, .post__title, .singular h1, .singular h2, .singular h3, .singular h4, .singular h5, .singular h6 {
		font-size: 2rem;
	}
	/* One column on narrow screens */
	.grid__sizer, .grid__item {
		width: 100%;
	}
	.grid__gutter-sizser {
		width:0%;
	}
	.footer__nav .menu-item {
		min-width: 100%;
	}
}

/* The styles below control the background stripes and the vertical alignment of elements to those stripes. */
/* These have been carefully calculated and matched */

/* The Stripes */
.stripes {
	background-origin: content-box;
    background-image: repeating-linear-gradient(
		180deg,
		var(--dkuk-secondary-colour),  /* previous 2 values match type height*/
		var(--dkuk-secondary-colour) var(--dkuk-stripe-white-height),  /* previous 2 values match type height*/
		var(--dkuk-primary-colour) var(--dkuk-stripe-white-height),  /* previous 2 values match type height*/
		var(--dkuk-primary-colour) var(--dkuk-stripe-total-height) /*add type height plys first value*/
	);
}

/* Ends Stripes */

/* Accessibility styles */
/* These are at the very end to make sure they override rules above */

/* Selection, focus, and hover rules */
/* also current page! */

.menu-item:hover {
	z-index: 100;
}

.current-menu-item>*, .menu-item a:hover, .menu-item a:hover>*, .menu-item:focus, .menu-item:focus>* {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
	border:none;
	outline:none;
}

/* Selection rules MUST be kept separate, god knows why */
/* They WILL NOT WORK if combined */
/* See https://css-tricks.com/overriding-the-default-text-selection-color-with-css/ */
::selection {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
	border:none;
	outline:none;
}

::selection>*  {
	background-color: var(--dkuk-primary-colour);
	color: var(--dkuk-secondary-colour);
	border:none;
	outline:none;
}

/* WordPress Generated Classes */
/* Text meant only for screen readers. */
/* From the Wordpress Codex */
/* https://codex.wordpress.org/CSS */

.screen-reader-text {
	clip: rect(1px, 1px, 1px, 1px);
	position: absolute !important;
	white-space: nowrap;
	height: 1px;
	width: 1px;
	overflow: hidden;
}

/* Ends accessibility styles */

/* BUG FIXES

.container-fluid {
	padding: 0 !important;
}

.row {
	margin: 0 !important;
}

*/

